<resources>
	<string name="app_name">Chransver</string>
	<string name="connect_PC">Connect PC</string>
	<string name="folder_name">Folder name</string>
	<string name="icon_image">icon image</string>
	<string name="connect_device">Connect Device</string>
	<string name="security">
		"Due to security reasons, Android 📱 prevents the manipulation of files located in micro_card. But the issue
		will is being worked on and will be fixed 🛠 in future update"
	</string>
	<string name="connect_PC_info">Open the browser on your laptop or desktop and enter this address <b>\"
		192.168.43.1:8181\"</b>. Make sure you mobile hotspot (Wi-Fi Hotspot) is switch on, and your laptop or PC is
		connected to the hotspot before connecting to the address.
	</string>
	<string name="connection_gif">Connection Gif</string>
	<string name="title">title</string>
	<string name="format_string">%1$s</string>
	<string name="settings">Settings</string>
	<!-- to toggle the open close button of the navigation drawer -->
	<string name="nav_open">Open</string>
	<string name="nav_close">Close</string>

	<!-- Preference -->
	<string name="title_activity_settings">Chransver Settings</string>
	<string name="mobile_transfer">Mobile transfer</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="header_image">Header image</string>
	<string name="mobile_connect">Mobile Connect</string>
	<string name="sd_card">SD Card</string>
	<string name="delete">delete</string>
	<string name="open">open</string>
	<string name="send">Send</string>
	<string name="receive">Receive</string>
	<string name="local_storage">Local Storage</string>
	<string name="scan_code_image">scan code image</string>
	<string name="scan_code">SCAN CODE</string>
	<string name="details">details</string>
    <string name="connection_status">Connection Status</string>
	<string name="wifi">Wifi</string>
	<string name="discover">Discover</string>
	<string name="message">Message</string>
    <string name="formatted_string">%1$s</string>
</resources>