<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/id_menu_setting"
        android:title="@string/settings"
        android:icon="@drawable/ic_setting"
        app:showAsAction="always"/>
    <item
        android:id="@+id/id_menu_local_storage"
        android:title="@string/local_storage"
        android:icon="@drawable/ic_mobile"/>
    <item
        android:id="@+id/id_menu_connect_computer"
        android:title="@string/connect_PC"
        android:icon="@drawable/ic_computer"
        android:visible="false"/>
    <item
        android:id="@+id/id_menu_sd"
        android:title="@string/sd_card"
        android:icon="@drawable/ic_micro_sd"/>

</menu>