<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ng.ohis.ktorandroidpc.fragments.ConnectPcFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/id_gif_ll"
        android:orientation="vertical"
        android:gravity="top">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/id_gif_image"
            android:src="@drawable/gifimage"
            android:layout_gravity="top"
            android:layout_marginVertical="10dp"
            android:contentDescription="@string/connection_gif"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:scrollbarSize="5dp"
            android:textAlignment="center"
            android:padding="10dp"
            android:textSize="20sp"
            android:fontFamily="cursive"
            android:text="@string/connect_PC_info"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_recycler_view"
        android:layout_gravity="top"
        android:visibility="gone"
        tools:listitem="@layout/explorer_item"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_btn_connect_browser"
        android:text="@string/connect_PC"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        tools:drawableStart="@drawable/ic_computer"
        android:drawablePadding="5dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/con_btn_design"
        style="@style/TextAppearance.AppCompat"
        android:textSize="25sp"
        android:layout_gravity="bottom|center"/>

<!--    <include-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="bottom"-->
<!--        layout="@layout/scrollable_button"/>-->
</FrameLayout>